--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@supercat1337/chain",
   "version": "1.0.2",
-  "description": "Chain",
+  "description": "Chain is a library for creating and executing tasks in a specific order. It provides methods for adding tasks, running the chain, and managing its state.",
   "main": "index.js",
   "scripts": {
     "test": "c8 ava",
